--- a/mod/area/castletimra0.git.yml
+++ b/mod/area/castletimra0.git.yml
@@ -34,26 +34,26 @@ Door List:
     CurrentHP: {type: :short, value: 60}
     Description: 
       type: :cexolocstr
-      str_ref: 9074
-      value: 
-        0: This heavy stone door is very sturdy.
-    DisarmDC: {type: :byte, value: 20}
+      str_ref: 9070
+      value: {}
+
+    DisarmDC: {type: :byte, value: 28}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 28}
-    GenericType_New: {type: :dword, value: 231}
+    GenericType_New: {type: :dword, value: 5}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 20}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: key_dasha}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: castletimra_2_castletimra0}
+    LinkedTo: {type: :cexostr, value: castletimrap_2_castletimra0}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
-      str_ref: 14452
+      str_ref: 5349
       value: 
-        0: Stone Door 20m0
+        0: Door
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -72,26 +72,17 @@ Door List:
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 35}
     Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 1013}
+    PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: castletimra0_2_casteltimra}
-    TemplateResRef: {type: :resref, value: ctp_door_20m0}
+    Tag: {type: :cexostr, value: castletirma0_2_castletimrap}
+    TemplateResRef: {type: :resref, value: nw_door_metal}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
     TrapDisarmable: {type: :byte, value: 1}
     TrapFlag: {type: :byte, value: 0}
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 2}
-    VarTable: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: GIT/Door List/VarTable
-        __struct_id: 0
-        Name: {type: :cexostr, value: arcane_lock}
-        Type: {type: :dword, value: 1}
-        Value: {type: :int, value: 1047}
-    Will: {type: :byte, value: 15}
+    Will: {type: :byte, value: 0}
     X: {type: :float, value: 0.0}
     Y: {type: :float, value: 25.0}
     Z: {type: :float, value: 0.2}
