--- a/mod/area/area043.are.yml
+++ b/mod/area/area043.are.yml
@@ -6,7 +6,7 @@ ChanceRain: {type: :int, value: 0}
 ChanceSnow: {type: :int, value: 0}
 Comments: {type: :cexostr, value: ""}
 Creator_ID: {type: :int, value: -1}
-DayNightCycle: {type: :byte, value: 1}
+DayNightCycle: {type: :byte, value: 0}
 Expansion_List: 
   type: :list
   value: []
@@ -30,7 +30,7 @@ Name:
   value: 
     0: "[ OOC - Gebiet ]"
 NoRest: {type: :byte, value: 0}
-OnEnter: {type: :resref, value: sr_enter_hills}
+OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
 OnHeartbeat: {type: :resref, value: _area_hb}
 OnUserDefined: {type: :resref, value: _area_udef}
@@ -48,7 +48,6 @@ Tile_List:
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -61,7 +60,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -74,7 +72,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -87,7 +84,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -100,7 +96,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -113,7 +108,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -126,7 +120,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -139,7 +132,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -152,7 +144,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -165,7 +156,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -178,7 +168,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -191,7 +180,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -204,7 +192,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -217,7 +204,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -230,7 +216,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -243,7 +228,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -256,7 +240,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -269,7 +252,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -282,7 +264,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -295,7 +276,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -308,7 +288,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -321,7 +300,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -334,7 +312,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -347,7 +324,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -360,7 +336,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -373,7 +348,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -386,7 +360,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -399,7 +372,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -412,7 +384,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
@@ -425,7 +396,6 @@ Tile_List:
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: ARE/Tile_List
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
